--- a/package.json
+++ b/package.json
@@ -19,9 +19,11 @@
   "homepage": "https://github.com/Rise-Vision/widget-google-spreadsheet",
   "devDependencies": {
     "babel-core": "^6.7.7",
+    "babel-eslint": "^6.1.2",
     "babel-loader": "^6.2.4",
     "babel-preset-es2015": "^6.6.0",
     "babel-preset-react": "^6.5.0",
+    "babel-preset-stage-2": "^6.22.0",
     "babel-register": "^6.8.0",
     "bower": "^1.5.3",
     "chai": "^2.1.2",
@@ -52,7 +54,7 @@
     "html-webpack-plugin": "^2.16.0",
     "imports-loader": "^0.6.5",
     "jquery": "2.2.4",
-    "react-addons-test-utils": "^0.14.8",
+    "react-addons-test-utils": "15.4.0",
     "run-sequence": "^0.3.2",
     "style-loader": "^0.13.1",
     "web-component-tester": "*",
@@ -63,8 +65,8 @@
   },
   "dependencies": {
     "fixed-data-table": "^0.6.0",
-    "react": "0.14.8",
-    "react-dom": "0.14.8",
+    "react": "15.4.0",
+    "react-dom": "15.4.0",
     "webfontloader": "^1.6.24"
   }
 }
